# openmpt

./: CMakeLists.txt
common/: version.cpp
